<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nome_prodotto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/nome_prodotto"
                android:textColor="@color/blue_800"
                android:textSize="34sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/immagine"
                android:layout_width="316dp"
                android:layout_height="397dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/immagine"
                app:srcCompat="@drawable/immagine"
                tools:srcCompat="@drawable/immagine" />

            <TextView
                android:id="@+id/descrizione_prodotto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/descrizione_prodotto"
                android:textAlignment="center"
                android:textColor="@color/blue_600"
                android:textIsSelectable="false"
                android:textSize="22sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:ignore="UselessLeaf">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="180dp"
                    android:text="@string/marca"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/marca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v_marca"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modello"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/modello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v_modello"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sistema_operativo"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sistema_operativo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v_sistema_operativo"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prezzo"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/prezzo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v_prezzo"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </TableRow>

        </TableLayout>

        <ImageView
            android:id="@+id/pulsante"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:contentDescription="@string/pulsante"
            app:srcCompat="@drawable/pulsante"
            tools:srcCompat="@drawable/pulsante" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>